this is a test submission

--- a/CurrentCalculator.html
+++ b/CurrentCalculator.html
@@ -10,6 +10,10 @@
 		<p>
 			Start html
 		</p>
+        
+        <p>
+            This is a change to the document
+        </p>
 
 	</body>
 </html>
